# socklib

./: .gitignore  CMakeLists.txt  addrs.cpp  errors.cpp  initialization.cpp  main.cpp  makefile  readme.md  socks.cpp  socks.cppcheck  socks.hpp
.github/workflows/: build.yml  test.yml
examples/echo_serv/: CMakeLists.txt  README.md  main.cpp
include/: addrs.hpp  errors.hpp  initialization.hpp  macros.hpp  socks.hpp
src/: addrs.cpp  errors.cpp  initialization.cpp  socks.cpp
tests/: CMakeLists.txt  basic.cpp  basic.tests.cpp  driver.cpp  readme.txt  steps.cpp  steps.hpp  testing.cpp  testing.hpp  unit.cpp  utility.cpp  utility.hpp  utility.tests.cpp
tests/include/: steps.hpp  utility.hpp
tests/src/: main.cpp  steps.cpp  tests.cpp  utility.cpp
